--- a/vbarkovskij.com/less/sections/reference.less
+++ b/vbarkovskij.com/less/sections/reference.less
@@ -160,6 +160,12 @@
                 cursor: pointer;
             }
 
+            &:before {
+                content: '';
+                display: inline-block;
+                padding: 50% 0;
+            }
+
             @media @smartphone-fixed {
                 margin-bottom: 20px;
                 margin-left: 15px;
